k8s/base/backend-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-a-moath
  namespace: moath-webapp
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: backend-a-moath
  template:
    metadata:
      labels:
        app: backend-a-moath
    spec:
      containers:
      - name: backend-a
        image: acrmoath.azurecr.io/backend-a:latest

        ports:
        - containerPort: 8080   # ✅ FIX

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "750m"
            memory: "512Mi"

        startupProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 5
