k8s/base/backend-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-a-moath
spec:
  type: ClusterIP
  selector:
    app: backend-a-moath
  ports:
  - port: 80
    targetPort: 8080
