k8s/base/network-policy-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-a-allow-ingress-nginx-moath
spec:
  podSelector:
    matchLabels:
      app: backend-a-moath

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
